--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,27 @@
   display: table;
   clear: both;
 }
+
+.container {
+  width: 80%;
+  margin:auto;
+}
+
+.head nav {
+  width: 50%;
+  float: left;
+}
+
+.head li {
+  display: inline-block;
+  padding: 0 25px;
+
+}
+
+.list-top {
+  text-transform: capitalize;
+}
+
+.list-bottom {
+  text-align: right;
+}
