--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,8 @@ body {
   padding: 0 15px;
 }
 
+
+
 /* css bottoni */
 
 .btn {
@@ -117,6 +119,7 @@ h1 {
 .titolo p {
   padding-top: 50px;
   line-height: 30px;
+  text-align: left;
 }
 
 .button-info {
@@ -164,7 +167,7 @@ h1 {
 .img-book {
   background-color: 	#ffffff;
   padding: 30px 150px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .learn-more {
@@ -188,5 +191,22 @@ h1 {
 
 .free-crm p {
   text-align: left;
-  line-height: 25px;
+  line-height: 25px
+}
+
+.free-crm hr {
+  width: 40%;
+}
+ /* lista */
+.free-crm  li {
+  display: inline-block;
+  padding: 20px 30px;
+  padding-left: 0;
+  list-style: none;
+}
+
+.free-crm i {
+ color: 	#ff8c00;
+ padding-left: 0px;
+ padding-right: 15px;
 }
