--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ h1 {
   height: 500px;
 }
 
+/* box */
 .box {
   width: 33%;
   float: left;
@@ -223,9 +224,21 @@ h1 {
   height: 400px;
   border-radius: 10px;
   margin-top: 40px;
+ text-align: center;
+ padding: 30px 30px;
 }
 
+/* immagine */
 .pic {
   width: 100px;
   height: 100px;
+  padding-bottom: 20px;
+}
+
+.box p {
+  line-height: 20px;
+}
+
+.box hr {
+margin: 50px 10px;
 }
