--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,8 @@ h1 {
   list-style: none;
 }
 
-.free-crm i {
+/* .free-crm i { */
+.first-body i {
  color: 	#ff8c00;
  padding-left: 0px;
  padding-right: 15px;
@@ -220,8 +221,9 @@ h1 {
 .box {
   width: 33%;
   float: left;
+
   background-color: 	#ffffff;
-  height: 400px;
+  /* height: 400px; */
   border-radius: 10px;
   margin-top: 40px;
  text-align: center;
@@ -238,7 +240,21 @@ h1 {
 .box p {
   line-height: 20px;
 }
-
+/* riga orrizontale */
 .box hr {
 margin: 50px 10px;
 }
+
+.box h4 {
+  padding-bottom: 50px;
+}
+
+/* lista verticale */
+ .box li {
+   list-style: none;
+   text-align: left;
+ }
+
+ .btn-learn {
+   padding: 35px 0;
+ }
