--- a/css/style.css
+++ b/css/style.css
@@ -221,8 +221,8 @@ h1 {
 .box {
   width: 33%;
   float: left;
-
-  background-color: 	#ffffff;
+  background-color: red;  
+  /* background-color: 	#ffffff; */
   /* height: 400px; */
   border-radius: 10px;
   margin-top: 40px;
