back-ground h2 e p quarta sezione body

--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,17 @@ h1 {
 .free-crm h3, p, h4 {
   padding-top: 20px;
 }
+/* riga orrizzontale */
+.info-features:before {
+     content: '';
+     display: block;
+     float: right;
+     width: 65%;
+     height: 2px;
+     margin-top: 9px;
+     background-color: #899397;
+}
+}
 
 .free-crm p {
   text-align: left;
@@ -214,7 +225,7 @@ h1 {
 /* terza sezione corpo centrale */
 
 .boxes {
-  height: 500px;
+  /* height: 500px; */
 }
 
 /* box */
@@ -276,3 +287,22 @@ margin: 50px 10px;
    margin-left: 4%;
  }
 /* /terza sezione corpo centrale */
+/* quarta sezione corpo centrale */
+.second-section {
+  height: 600px;
+  background-color: #00B7AC;
+}
+
+.blue-section {
+  text-align: center;
+  color: 	#ffffff;
+}
+/* titolo sezione */
+.blue-section h2 {
+  font-size: 35px;
+  padding-top: 60px;
+}
+/* paragrafo sezione */
+.blue-section p {
+  padding: 40px 0;
+}
