--- a/css/style.css
+++ b/css/style.css
@@ -474,11 +474,12 @@ margin: 50px 10px;
 
 footer {
   background-color: #32495b;
-  height: 800px;
+  /* height: 800px; */
   margin-top: 50px;
 }
 
 .foot-box {
+  height: 1000px;
   color: #ffffff;
   text-transform: capitalize;
   padding-top: 30px;
@@ -504,4 +505,20 @@ footer {
 .foot-box .icon-list li {
   display: inline-block;
   padding: 15px 8px 0 8px;
+}
+
+.middle-foot {
+  color: #ffffff;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.middle-foot .languages-list ul {
+  padding-top: 50px;
+}
+
+.middle-foot li {
+  display: inline-block;
+  list-style: none;
+  padding: 0 15px;
 }
