--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ body {
   margin:auto;
 }
 
+.int .list-top{
+  text-align: left;
+
+}
+
 .head nav {
   width: 50%;
   float: left;
@@ -27,6 +32,10 @@ body {
 
 .head li {
   display: inline-block;
+  
+}
+
+.head .a-right {
   padding: 0 25px;
 }
 
@@ -49,7 +58,7 @@ a {
 }
 
 .list-top i {
-  padding: 0 15px;
+  padding: 0 15px 0 0;
 }
 
 
