--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,11 @@ margin: 50px 10px;
   padding: 20px 0;
 }
 
+.first-row li img {
+  width: 80px;
+  height: 60px;
+}
+
 .first-row .icon {
   font-size: 30px;
 }
@@ -370,6 +375,11 @@ margin: 50px 10px;
 .bottom-row li {
   list-style: none;
   padding: 20px 0;
+}
+
+.bottom-row li img {
+  width: 80px;
+  height: 60px;
 }
 
 .bottom-row .icon {
