--- a/css/style.css
+++ b/css/style.css
@@ -39,14 +39,11 @@ body {
   padding: 0 25px;
 }
 
-a {
-  color: #000000;
-}
 
  a {
   text-decoration: none;
   text-transform: capitalize;
-
+  color: #000000;
 }
 
 .list-bottom {
@@ -82,8 +79,10 @@ a {
 
 /* seconda nav */
 
+
 .nav-bottom {
   margin-top: 25px;
+  height: 60px;
 }
 
 .nav-logo {
@@ -159,12 +158,15 @@ h1 {
 
 /* prima sezione corpo centrale */
 
+
 .img-square .square, h2, p {
   text-align: center;
   padding-top: 30px;
 }
 
-
+.first-d .square {
+  width: 250px;
+}
 
 .img-square h2 {
   font-size: 35px;
